# SoundSnatcherDev

./: .bash_profile  .gitignore  compile.bat  pyproject.toml  requirements.txt  runCli.py  runDesktop.py  setup.iss  setup.py  version.txt
Back/: knownpaths.py  main.py  wavConverter.py
Front/Desktop/: main.py
Front/Desktop/locales/: localesHander.py  strings.py
Front/Mobile/Android/: main.py
certificate/: about.txt  certificate.pfx  gen_cert.ps1  sign.ps1
tmp/: meta.json
