[tool.poetry]
name = "soundsnatcher"
version = "1.0.0"
description = "A simple app to download playlists/albums/songs from extarnal sources like youtube, soundcloud or spotify"
authors = ["Olivier Neve"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
sv-ttk = "^2.5.5"
pillow = "^10.1.0"
multidict = "6.0.4"
soundcloud-lib = "^0.6.1"
pytube = "^15.0.0"
pyinstaller = "^6.1.0"


[tool.poetry.group.dev.dependencies]
setuptools = "^68.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
