[tool.poetry]
name = "soundsnatcher"
version = "0.1.0"
description = ""
authors = ["Olivier Neve"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
multidict = "^6.0.5"
soundcloud-lib = "^0.6.1"
spotdl = "^4.2.5"
pytube = "^15.0.0"
customtkinter = "^5.2.2"
py2app = "^0.28.7"
pydub = "^0.25.1"
requests = "^2.31.0"
charset-normalizer = "^3.3.2"
chardet = "^5.2.0"
validators = "^0.33.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
